// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeBlock should render html code block with proper indentation 1`] = `
<div
  className="post-code"
>
  <div
    className="post-code__overlay"
  >
    <CopyButton
      afterCopyText="Copied"
      content="\`\`\`html
<div className='myClass'>
  <a href='https://randomgibberishurl.com'>ClickMe</a>
</div>
\`\`\`
"
      placement="top"
    />
    <span
      className="post-code__language"
    >
      HTML, XML
    </span>
  </div>
  <RootPortal>
    <ContextMenu
      className="post-code__context-menu"
      data={Object {}}
      hideOnLeave={false}
      id="copy-code-block-context-menu-randompostid"
      onHide={[Function]}
      onMouseLeave={[Function]}
      onShow={[Function]}
      preventHideOnContextMenu={false}
      preventHideOnResize={false}
      preventHideOnScroll={false}
      rtl={false}
      style={Object {}}
    >
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy"
          id="copy.message"
        />
      </MenuItem>
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={true}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      />
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy code block"
          id="copy.block.message"
        />
      </MenuItem>
    </ContextMenu>
  </RootPortal>
  <ContextMenuTrigger
    attributes={Object {}}
    collect={[Function]}
    disable={false}
    disableIfShiftIsPressed={false}
    holdToDisplay={-1}
    id="copy-code-block-context-menu-randompostid"
    mouseButton={2}
    posX={0}
    posY={0}
    renderTag="div"
  >
    <div
      className="hljs"
    >
      <div
        className="post-code__line-numbers"
      >
        1
2
3
4
5
6
      </div>
      <code
        dangerouslySetInnerHTML={
          Object {
            "__html": "\`\`\`html
&lt;div className=&apos;myClass&apos;&gt;
  &lt;a href=&apos;https://randomgibberishurl.com&apos;&gt;ClickMe&lt;/a&gt;
&lt;/div&gt;
\`\`\`
",
          }
        }
      />
    </div>
  </ContextMenuTrigger>
</div>
`;

exports[`codeBlock should render typescript code block 1`] = `
<div
  className="post-code"
>
  <div
    className="post-code__overlay"
  >
    <CopyButton
      afterCopyText="Copied"
      content="\`\`\`typescript
const myFunction = () => {
    console.log('This is a meaningful function');
};
\`\`\`
"
      placement="top"
    />
    <span
      className="post-code__language"
    >
      TypeScript
    </span>
  </div>
  <RootPortal>
    <ContextMenu
      className="post-code__context-menu"
      data={Object {}}
      hideOnLeave={false}
      id="copy-code-block-context-menu-randompostid"
      onHide={[Function]}
      onMouseLeave={[Function]}
      onShow={[Function]}
      preventHideOnContextMenu={false}
      preventHideOnResize={false}
      preventHideOnScroll={false}
      rtl={false}
      style={Object {}}
    >
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy"
          id="copy.message"
        />
      </MenuItem>
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={true}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      />
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy code block"
          id="copy.block.message"
        />
      </MenuItem>
    </ContextMenu>
  </RootPortal>
  <ContextMenuTrigger
    attributes={Object {}}
    collect={[Function]}
    disable={false}
    disableIfShiftIsPressed={false}
    holdToDisplay={-1}
    id="copy-code-block-context-menu-randompostid"
    mouseButton={2}
    posX={0}
    posY={0}
    renderTag="div"
  >
    <div
      className="hljs"
    >
      <div
        className="post-code__line-numbers"
      >
        1
2
3
4
5
6
      </div>
      <code
        dangerouslySetInnerHTML={
          Object {
            "__html": "\`\`\`typescript
const myFunction = () =&gt; {
    console.log(&apos;This is a meaningful function&apos;);
};
\`\`\`
",
          }
        }
      />
    </div>
  </ContextMenuTrigger>
</div>
`;

exports[`codeBlock should render unknown language 1`] = `
<div
  className="post-code"
>
  <div
    className="post-code__overlay"
  >
    <CopyButton
      afterCopyText="Copied"
      content="\`\`\`unknownLanguage
this is my unknown language
it shouldn't highlight, it's just garbage
\`\`\`
"
      placement="top"
    />
  </div>
  <RootPortal>
    <ContextMenu
      className="post-code__context-menu"
      data={Object {}}
      hideOnLeave={false}
      id="copy-code-block-context-menu-randompostid"
      onHide={[Function]}
      onMouseLeave={[Function]}
      onShow={[Function]}
      preventHideOnContextMenu={false}
      preventHideOnResize={false}
      preventHideOnScroll={false}
      rtl={false}
      style={Object {}}
    >
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy"
          id="copy.message"
        />
      </MenuItem>
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={true}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      />
      <MenuItem
        attributes={Object {}}
        className=""
        data={Object {}}
        disabled={false}
        divider={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preventClose={false}
        selected={false}
      >
        <MemoizedFormattedMessage
          defaultMessage="Copy code block"
          id="copy.block.message"
        />
      </MenuItem>
    </ContextMenu>
  </RootPortal>
  <ContextMenuTrigger
    attributes={Object {}}
    collect={[Function]}
    disable={false}
    disableIfShiftIsPressed={false}
    holdToDisplay={-1}
    id="copy-code-block-context-menu-randompostid"
    mouseButton={2}
    posX={0}
    posY={0}
    renderTag="div"
  >
    <div
      className="hljs"
    >
      <code
        dangerouslySetInnerHTML={
          Object {
            "__html": "\`\`\`unknownLanguage
this is my unknown language
it shouldn&apos;t highlight, it&apos;s just garbage
\`\`\`
",
          }
        }
      />
    </div>
  </ContextMenuTrigger>
</div>
`;
